# qt5-interface-rpi

./: CMakeLists.txt  CMakeLists.txt.user.f0ea2ca  Command.cpp  Command.h  NetworkHandler.cpp  bottom.cpp  bottom.h  bottom.ui  commandlistener.cpp  commandlistener.h  commandlistenerthread.cpp  commandlistenerthread.h  dbuscommandlistener.cpp  dbuscommandlistener.h  display.cpp  display.h  display.ui  left.cpp  left.h  left.ui  main.cpp  main.h  mfddisplay.cpp  mfddisplay.h  right.cpp  right.h  right.ui  subdisplay.cpp  subdisplay.h  subdisplay.ui  top.cpp  top.h  top.ui
